refactor: clarify separation between finder services and repositories
In Finder services:
Remove calls to JsonDataHandler.
Replace with a proper call to repositories, that are responsible to deal with JsonDataHandler.

PersonFinder:
Rename findBy() method to findByLastName() method.
Update imports.

MedicalRecordFinder:
add method getAllMedicalRecords() that calls the repository's findAll() method;
in findByIdentity() method: call repository findByIdentity() method, catch and log a ResourceNotFoundException.

FireStationFinder:
In getAllFireStations() method, call the repositoriy's findAll() method. Update imports. Remove comments.